[gd_scene load_steps=13 format=1]

[ext_resource path="res://Texture/menu/options/fondo opzioni.tex" type="Texture" id=1]
[ext_resource path="res://Scripts/volumeMenu.gd" type="Script" id=2]
[ext_resource path="res://Texture/menu/options/volume/musica.tex" type="Texture" id=3]
[ext_resource path="res://Texture/menu/options/volume/sfx.tex" type="Texture" id=4]
[ext_resource path="res://Texture/menu/options/volume.tex" type="Texture" id=5]
[ext_resource path="res://Texture/menu/options/volume/freccette.tex" type="Texture" id=6]
[ext_resource path="res://Texture/menu/options/volume/vol3.tex" type="Texture" id=7]
[ext_resource path="res://Texture/menu/options/volume/freccetta.tex" type="Texture" id=8]
[ext_resource path="res://Sounds/Sample/[No Copyright Music] Ukulele Bells - HookSounds.smp" type="Sample" id=9]
[ext_resource path="res://Texture/menu/options/back.tex" type="Texture" id=10]
[ext_resource path="res://Sounds/Music/[No Copyright Music] Ukulele Bells - HookSounds_1.opus" type="AudioStream" id=11]

[sub_resource type="SampleLibrary" id=1]

"samples/[No Copyright Music] Ukulele Bells - HookSounds" = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }

[node name="volume" type="TextureFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 30.0
margin/right = 703.0
margin/bottom = 924.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="music_Logo" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 250.0
margin/right = 445.0
margin/bottom = 300.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="SFX_Logo" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 294.0
margin/top = 433.0
margin/right = 489.0
margin/bottom = 483.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Volume_White_Brand" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 150.0
margin/right = 480.0
margin/bottom = 214.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="freccetteEsempio" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 129.0
margin/top = 532.0
margin/right = 540.0
margin/bottom = 577.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="volume_barretta" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 193.0
margin/top = 361.0
margin/right = 366.0
margin/bottom = 401.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="SFX_barretta" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 541.0
margin/right = 365.0
margin/bottom = 581.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="SFX_up" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 541, 576 )
transform/rot = -180.0
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="SFX_less" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 130, 532 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="volume_up" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 541, 394 )
transform/rot = -180.0
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="volume_less" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 130, 350 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="back" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 231, 709 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 11 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="SFX_up" to="." method="_on_SFX_up_pressed"]

[connection signal="pressed" from="SFX_less" to="." method="_on_SFX_less_pressed"]

[connection signal="pressed" from="volume_up" to="." method="_on_volume_up_pressed"]

[connection signal="pressed" from="volume_less" to="." method="_on_volume_less_pressed"]

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]


